src/objects/loan__Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>loan__Metro2_Account_pmt_history_date__c</fullName>
        <description>Date when last Metro2 file was generated.</description>
        <label>Last Reported Metro2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_CCCD_Date__c</fullName>
        <description>Compliance Condition Code reported date</description>
        <label>CCCD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_CIIC_Date__c</fullName>
        <description>Reported date of Consumer Information Indicator Code</description>
        <label>CIIC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Compliance_Condition_Code__c</fullName>
        <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
        <description>Reported Metro2_Compliance_Condition_Code__c.</description>
        <label>Compliance Conditon Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Consumer_Information_Code__c</fullName>
        <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
        <description>Reported Consumer Information Code</description>
        <label>Consumer Information Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_First_Delinquency_Date__c</fullName>
        <inlineHelpText>This will be reported only if the Account Status Code is 61-65, 71, 78, 80, 82-84, 88-89 and 93-97.
This field gets updated only when the status of loan account changes from Active-Good Standing to Active-Bad Standing.</inlineHelpText>
        <label>Date of First Delinquency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Payment_History__c</fullName>
        <inlineHelpText>Report one month’s payment record in each byte from the left to right in least recent to most recent order.</inlineHelpText>
        <label>Payment History</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Payment_Rating__c</fullName>
        <inlineHelpText>The Payment Rating contains a code that properly identifies whether the account is current, past due, in collections or charged off within the activity period being reported.</inlineHelpText>
        <label>Payment Rating</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Portfolio_Type__c</fullName>
        <inlineHelpText>Contains the one-character abbreviation for type of portfolio. Values available:
C = Line of credit 
I = Installment
M = Mortgage
O = Open account
R = Revolving</inlineHelpText>
        <label>Portfolio Type</label>
        <picklist>
            <picklistValues>
                <fullName>Installment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revolving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Special_Comment__c</fullName>
        <label>Metro2 Special Comment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Migration_Date__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Advance_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Minimum Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Draw_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Minimum advance amount which can be drawn by customer, applicable for line of credits.</inlineHelpText>
        <label>Minimum Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Due_Amount_On_Billing__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Minimum Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__New_Field_3__c</fullName>
        <label>New Field 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Next_Commission_Payment_Date__c</fullName>
        <description>Next Payment Date For Commission</description>
        <inlineHelpText>Next Payment Date For Commission.</inlineHelpText>
        <label>Next Commission Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Crb_Payment_Profile_Date__c</fullName>
        <description>Next Payment Profile Generation date</description>
        <inlineHelpText>Next Payment Profile Generation date</inlineHelpText>
        <label>Next Credit Bureau Payment Profile Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Due_Generation_Date__c</fullName>
        <description>Next Due Generation Date.</description>
        <inlineHelpText>This is determined by using the pre- bill days.</inlineHelpText>
        <label>Next Due Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Installment_Date__c</fullName>
        <description>Date of the next installment</description>
        <inlineHelpText>Date of the Next Due</inlineHelpText>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Repayment_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the amount due as next repayment for this account as of today</description>
        <inlineHelpText>Tells the amount due as next repayment for this account as of today</inlineHelpText>
        <label>Next Repayment Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Days_Overdue__c</fullName>
        <inlineHelpText>Number of days for which there has been an overdue on the loan account.</inlineHelpText>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Installments__c</fullName>
        <description>Contractual Term Of the Loan Account</description>
        <inlineHelpText>Contractual term of the contract.</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Past_Installments__c</fullName>
        <label>Number of Past Installments</label>
        <summaryFilterItems>
            <field>loan__Repayment_Schedule__c.loan__Past_Due_Date__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Repayment_Schedule__c.loan__Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Refinance_Transactions_Settled__c</fullName>
        <inlineHelpText>Number of Refinance Transactions Settled</inlineHelpText>
        <label>Number of Refinance Transactions Settled</label>
        <summaryFilterItems>
            <field>loan__Refinance_Transaction__c.loan__Settled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Refinance_Transaction__c.loan__Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Refinance_Transactions__c</fullName>
        <inlineHelpText>Number of Refinance Transactions</inlineHelpText>
        <label>Number of Refinance Transactions</label>
        <summaryForeignKey>loan__Refinance_Transaction__c.loan__Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Number__c</fullName>
        <description>One time ACH account number</description>
        <inlineHelpText>One time ACH account number</inlineHelpText>
        <label>OT ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Type__c</fullName>
        <description>One time ACH Account type: Saving or checking</description>
        <label>OT ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Bank_Name__c</fullName>
        <description>One time ACH Bank Name</description>
        <inlineHelpText>One time ACH Bank&apos;s name</inlineHelpText>
        <label>OT ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Debit_Date__c</fullName>
        <label>OT ACH Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address1__c</fullName>
        <description>One time ACH Drawer Address Line 1</description>
        <inlineHelpText>One time ACH Drawer Address Line 1</inlineHelpText>
        <label>OT ACH Drawer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address2__c</fullName>
        <description>One time ACH Drawer Address Line 2</description>
        <inlineHelpText>One time ACH Drawer Address Line 2</inlineHelpText>
        <label>OT ACH Drawer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_City__c</fullName>
        <description>One time ACH Drawer City</description>
        <inlineHelpText>One time ACH Drawer city</inlineHelpText>
        <label>OT ACH Drawer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Name__c</fullName>
        <description>One time ACH Drawer Name</description>
        <inlineHelpText>One time ACH drawer name</inlineHelpText>
        <label>OT ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_State__c</fullName>
        <description>One time ACH Drawer State</description>
        <inlineHelpText>One time ACH Drawer State</inlineHelpText>
        <label>OT ACH Drawer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Zip__c</fullName>
        <description>One time ACH Drawer Zip</description>
        <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
        <label>OT ACH Drawer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Fee_Amount__c</fullName>
        <description>One time ACH fee amount</description>
        <inlineHelpText>One time ACH fee amount</inlineHelpText>
        <label>OT ACH Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Payment_Amount__c</fullName>
        <description>One time ACH payment amount</description>
        <inlineHelpText>One time ACH payment amount</inlineHelpText>
        <label>OT ACH Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Relationship_Type__c</fullName>
        <description>One time ACH relationship type</description>
        <label>OT ACH Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2 Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Routing_Number__c</fullName>
        <description>One time ACH Routing number</description>
        <inlineHelpText>One time ACH Routing number</inlineHelpText>
        <label>OT ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_Borrower_ACH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One time borrower ACH</description>
        <inlineHelpText>One time borrower ACH</inlineHelpText>
        <label>OT Borrower ACH</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipName>Lending1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Oldest_Due_Date__c</fullName>
        <description>Oldest Due Date</description>
        <inlineHelpText>Oldest due date on the loan account.</inlineHelpText>
        <label>Oldest Unpaid  Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Origin_Source__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <description>Origin Source of the loan account.</description>
        <label>Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OutstandingGreaterThanWriteoff__c</fullName>
        <formula>IF(loan__Principal_Remaining__c+loan__Fees_Remaining__c+loan__Interest_Accrued_Not_Due__c &gt; loan__Write_off_Tolerance_Amount__c , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding&gt;Writeoff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the amount overdue for this account as of today</description>
        <inlineHelpText>Tells the amount overdue for this account as of today</inlineHelpText>
        <label>Overdue Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Interest_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overdue Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue interest from previous installments</description>
        <inlineHelpText>Overdue interest from previous installments</inlineHelpText>
        <label>Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Penalty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue penalty from previous installments.</description>
        <inlineHelpText>Overdue penalty from previous installments.</inlineHelpText>
        <label>Overdue Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue principal from earlier installments.</description>
        <inlineHelpText>Overdue principal from earlier installments.</inlineHelpText>
        <label>Overdue Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pay_Off_Amount_As_Of_Today__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Tells the pay off amount for this account as of today</description>
        <inlineHelpText>Tells the pay off amount for this account as of today</inlineHelpText>
        <label>Today&apos;s Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Loan payment amount. It excludes any fee that is gathered as a part of EMI.</description>
        <inlineHelpText>Contractual payment amount</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Application_Mode__c</fullName>
        <description>If the value is Future Dues, Reserve Amount For Next Due will be used for satisfying Bills. Otherwise, Reserve Amount For Next Due will not be used for satisfying Bills.</description>
        <inlineHelpText>Possible values are 
1) Future Dues
2) Current Dues
Future Dues is used when Loan Payments should be used to satisfy future dues.
Current Dues is used when Loan Payments should only be used to satisfy present dues.</inlineHelpText>
        <label>Payment Application Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Future Dues</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current Dues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Tolerance_End_Date__c</fullName>
        <description>End date for the payment tolerance</description>
        <inlineHelpText>End date for the payment tolerance</inlineHelpText>
        <label>Payment Tolerance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Tolerance_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the percentage of amount that is tolerable for not marking the account as a delinquent account.</inlineHelpText>
        <label>Payment Tolerance Rate</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Tolerance_Start_Date__c</fullName>
        <description>Start date to apply the payment tolerance</description>
        <inlineHelpText>Start date to apply the payment tolerance</inlineHelpText>
        <label>Payment Tolerance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payoff_Fee_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates whether we need to assess payoff fee or not.</description>
        <inlineHelpText>Checked if the Payoff fees needs to be assessed on the Loan account.</inlineHelpText>
        <label>Payoff Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Penalty_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Penalty Paid</description>
        <inlineHelpText>Penalty Paid</inlineHelpText>
        <label>Penalty Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Penalty_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Penalty Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Periodic_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Periodic Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Pmt_Amt_Cur__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Current Payment Amount</description>
        <inlineHelpText>This is the current installment amount that needs to be paid.</inlineHelpText>
        <label>Current Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Bill_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days before due date to have the bill generated.</description>
        <inlineHelpText>Number of days for the bill to be generated before the actual installment date</inlineHelpText>
        <label>Pre Bill Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Paid_Interest_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Pre Paid Interest Amount</description>
        <inlineHelpText>This is the Interest that you pay in advance. This can occur only at the closing of a loan.</inlineHelpText>
        <label>Pre Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Paid_Interest_Paid_Till_Date__c</fullName>
        <description>Pre-Paid Interest Paid Till Date.</description>
        <inlineHelpText>This is the amount of Interest paid in advance till date.</inlineHelpText>
        <label>Pre Paid Interest Paid Till Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Method__c</fullName>
        <label>Prepayment Penalty Method</label>
        <picklist>
            <picklistValues>
                <fullName>Amount calculated as % of loan amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of loan payoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of principal balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Penalty_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prepayment Penalty Indicator</description>
        <inlineHelpText>Check this box to enable prepayment penalties on this loan. The prepayment penalty is only applicable to loan payoffs.</inlineHelpText>
        <label>Prepayment Penalty Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Penalty_Periods__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This determines the number of payment periods for which the prepayment penalty is applicable. 
For example, if a loan payoff occurs before the number of periods in this field has passed by, a prepayment penalty will be charged for the loan.</inlineHelpText>
        <label>Prepayment Penalty Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prepayment Penalty Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Previous_Installment_Date__c</fullName>
        <description>Last Billing Date</description>
        <inlineHelpText>Last Bill Date</inlineHelpText>
        <label>Last Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Prin_Int_EMI_Generated_On_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prin Int EMI Generated On Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Adjustment_Subtract__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Principal Adjustment (negative)</inlineHelpText>
        <label>Principal Adjustment - Sub</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Addition to the Principal or advance made through Principal Adjustment transaction.</inlineHelpText>
        <label>Principal Adjustment - Add</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Interest_EMI_Generated_On_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principal Interest EMI Generated On Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal Paid Account Balance Details- System calculated Uneditable fields</description>
        <inlineHelpText>Paid Principal/Advance.</inlineHelpText>
        <label>Principal/Advance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Posted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal/Advance Posted</description>
        <inlineHelpText>Total Principal/Advance given to customer.</inlineHelpText>
        <label>Principal/Advance Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal/Advance Remaining</description>
        <inlineHelpText>Unpaid Principal/advance balance on the loan account.</inlineHelpText>
        <label>Principal/Advance Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Product_Type__c</fullName>
        <description>Type of Product, only LoC and Loans are supported.</description>
        <inlineHelpText>This will be populated from lending product and must not be changed by the user.
This will define the classification of the product.
Possible values are
1) Loan
2) Line of credit
3) Merchant Cash Advance</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Loan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amz Based Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Change_Dt_Last__c</fullName>
        <inlineHelpText>The last date when the interest rate changed on the loan account</inlineHelpText>
        <label>Last Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Change_Dt_Next__c</fullName>
        <inlineHelpText>This contains the date when the interest rate will change for the loan account</inlineHelpText>
        <label>Next Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Recalculate_Interest_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag will be applicable to AMZ based loans, where we need to recalculate the interest for the loan actions instead of using the interest rate on contract.</inlineHelpText>
        <label>Recalculate Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Recovered_Principal_Balance__c</fullName>
        <description>In case of Loan Write Off recovery, this field will be populated with an amount that has been recovered from the Borrower and has been added to Principal amount that is recovered.</description>
        <label>Recovered Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Refinanced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag is checked once the contract is Refinanced.</inlineHelpText>
        <label>Refinanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Remaining_Loan_Amount__c</fullName>
        <formula>loan__Disbursal_Amount__c - loan__Disbursed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining amount to be funded to the borrower</inlineHelpText>
        <label>Remaining Amount for Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Billing_Method__c</fullName>
        <description>Repayment Billing Method to Line of Credit</description>
        <label>Repayment Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Of Remaining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Plus Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Period_Interest_Calculation__c</fullName>
        <label>Repayment Period Interest Calculation</label>
        <picklist>
            <controllingField>loan__Repayment_Billing_Method__c</controllingField>
            <picklistValues>
                <fullName>Simple Interest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Compounding Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Procedure__c</fullName>
        <inlineHelpText>This is the procedure to be followed to create the Installment schedule.</inlineHelpText>
        <label>Repayment Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Schedule_Count__c</fullName>
        <label>Repayment Schedule Count</label>
        <summaryFilterItems>
            <field>loan__Repayment_Schedule__c.loan__Is_Archived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Repayment_Schedule__c.loan__Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Start_Basis__c</fullName>
        <inlineHelpText>For a funding in tranches loan, the regular repayment will start depending upon the value of this field.</inlineHelpText>
        <label>Repayment Start Basis</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Full Disbursal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draw Period End</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Term_Payment_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Repayment Term Payment Percentage, for Line of credit</description>
        <label>Repayment Term Payment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Tied_to_Meeting_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Repayment Tied to Meeting Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Repayments_Count__c</fullName>
        <description>Repayments Count</description>
        <inlineHelpText>Repayments Count</inlineHelpText>
        <label>Repayments Count</label>
        <summaryForeignKey>loan__Loan_Payment_Transaction__c.loan__Loan_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Reserve_Amount_for_Next_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>For example,if you were supposed to pay 100 dollars as a part of your monthly installment, but you decide to pay 120 dollars. Now, 20 dollars becomes the reserve amount and will be automatically applied to the next bill when it is generated</inlineHelpText>
        <label>Reserve Amount for Next Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>